Fix: widget overlap poitions

--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -3322,3 +3322,7 @@ li.nav-item.cookie-tab a {
 .sidebar-accordion .fixwidth {
     max-width: 213px;
 }
+
+div#steve-parent-accordion{
+  right: 120px;
+}
